# coworkany

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORCE_CLEAN.bat  README.md  SECURITY.md  coworkany.pen  findings.md  package-lock.json  package.json  progress.md  task_plan.md  verify_core_skills.ts
.codesight/: CODESIGHT.md  config.md  graph.md  libs.md  middleware.md  routes.md
.github/: dependabot.yml  pull_request_template.md
artifacts/: sora-task-replay-check-latest.json  sora-task-replay-check-v2-latest.json  sora-task-replay-diag-latest.json
browser-use-service/: README.md  main.py  requirements.txt  test_main.py
desktop/: UI_REFACTORING_PLAN.md  bunfig.toml  index.html  package-lock.json  package.json  playwright.config.ts  run-err.txt  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  build_err.txt  check_err.json  check_err.txt  check_err_utf8.txt  fix_await.py  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/native/: macos_asr.m  macos_asr.swift
desktop/src-tauri/src/: diff.rs  git_integration.rs  ipc.rs  lib.rs  magnetic_window.rs  main.rs  platform_asr.rs  platform_runtime.rs  process_manager.rs  screen_capture.rs  shadow_fs.rs  sidecar.rs  tray.rs  window_manager.rs
desktop/src-tauri/src/policy/: audit.rs  commands.rs  engine.rs  mod.rs  rust_policy_gate.rs  types.rs
docs/: RELEASING.md  TECHNICAL_DESIGN.md  USER_GUIDE_CN.md  agent-system.md  backlog.md  macos-distribution.md  (+2 more)
(+1105 files in other folders)
